--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "cd client && npm run start",
-    "seed": "node seeder/seed.js"
+    "seed": "node seeder/seed.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "name": "portfolio-server",
   "description": "",
